@@ -1,9 +1,9 @@
-# @(#)$Ident: Build.PL 2013-05-15 19:29 pjf ;
+# @(#)$Ident: Build.PL 2013-05-17 15:13 pjf ;
 
 use strict;
 use warnings;
 use inc::Bob; # Module::Build subclass
-use version; our $VERSION = qv( sprintf '0.20.%d', q$Rev: 9 $ =~ /\d+/gmx );
+use version; our $VERSION = qv( sprintf '0.20.%d', q$Rev: 11 $ =~ /\d+/gmx );
 
 Bob->new( {
    module    => q(File::DataClass),
@@ -28,16 +28,15 @@ Bob->new( {
       'XML::DTD'                   => 0.10,
       'XML::Simple'                => 2.18,
       'Unexpected'                 => q(0.1.0), },
-   recommends            => {
-      'App::cpanminus'   => 1.6005, },
-   configure_requires    => {
-      'version'          => 0.88,
-      'Module::Build'    => 0.4004, },
-   build_requires        => {
-      'version'          => 0.88,
-      'Exception::Class' => 1.32,
-      'Module::Build'    => 0.4004,
-      'Text::Diff'       => 1.37, },
+   recommends          => {
+      'App::cpanminus' => 1.6005, },
+   configure_requires  => {
+      'version'        => 0.88,
+      'Module::Build'  => 0.4004, },
+   build_requires      => {
+      'version'        => 0.88,
+      'Module::Build'  => 0.4004,
+      'Text::Diff'     => 1.37, },
 } )->create_build_script; # Goal!
 
 # Local Variables:
