@@ -1,6 +1,7 @@
 Revision history for File::DataClass
 
 0.20.10   2013-05-16 01:10:09
+          - Fixed defined/false bug in ::HashMerge
           - Delayed loading storage class for Any
           - Added File::Path as a prereq again
           - Updated prereqs in Build.PL
